chore: yoink workflows, fix kromgo host, update mise

--- a/kubernetes/apps/observability/kromgo/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kromgo/app/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
       app:
         className: external
         hosts:
-          - host: "{{ .Release.Name }}.devbu.io"
+          - host: "{{ .Release.Name }}.goyangi.cloud"
             paths:
               - path: /
                 service:
