--- a/.github/workflows/label-sync.yaml
+++ b/.github/workflows/label-sync.yaml
@@ -1,10 +1,18 @@
+---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: "Label Sync"
+
 on:
   workflow_dispatch:
   push:
     branches: ["main"]
     paths: [".github/labels.yaml"]
+  schedule:
+    - cron: "0 0 * * *" # Every day at midnight
+
+permissions:
+  issues: write
+
 jobs:
   label-sync:
     name: Label Sync
@@ -12,6 +20,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          sparse-checkout: .github/labels.yaml
+
       - name: Sync Labels
         uses: EndBug/label-sync@v2
         with:
