--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -1,15 +1,21 @@
+---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: "Pre-pull Images"
+
 on:
   pull_request:
     branches: ["main"]
     paths:
-      - kubernetes/**
+      - kubernetes/apps/**
+      - kubernetes/flux/**
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
   cancel-in-progress: true
+
 env:
   HOMEBREW_NO_ANALYTICS: "1"
+
 jobs:
   extract-images:
     name: Extract Images
@@ -28,16 +34,23 @@ jobs:
         with:
           app-id: "${{ secrets.BOT_APP_ID }}"
           private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
           token: "${{ steps.app-token.outputs.token }}"
           ref: "${{ matrix.branches == 'default' && github.event.repository.default_branch || '' }}"
+
       - name: Gather Images
         uses: docker://ghcr.io/allenporter/flux-local:v7.0.0
         with:
           args: >-
-            get cluster --path /github/workspace/kubernetes/flux/cluster --enable-images --output yaml --output-file images.yaml
+            get cluster
+            --path /github/workspace/kubernetes/flux/cluster
+            --enable-images
+            --output yaml
+            --output-file images.yaml
+
       - name: Extract Images
         id: extract-images
         run: |
@@ -45,6 +58,7 @@ jobs:
               '[.. | .images? | select(. != null)] | flatten | sort | unique' images.yaml \
           )
           echo "${{ matrix.branches }}=${images}" >> $GITHUB_OUTPUT
+
   compare-images:
     name: Compare Images
     runs-on: ubuntu-latest
@@ -61,10 +75,11 @@ jobs:
               '$f2 - $f1' \
           )
           echo "images=${images}" >> $GITHUB_OUTPUT
+
   pre-pull-images:
     if: ${{ needs.compare-images.outputs.images != '[]' }}
     name: Pre-pull Images
-    runs-on: ["gha-runner-scale-set"]
+    runs-on: ["home-ops-runner"]
     needs: ["compare-images"]
     strategy:
       matrix:
@@ -74,10 +89,13 @@ jobs:
     steps:
       - name: Setup Homebrew
         uses: Homebrew/actions/setup-homebrew@master
+
       - name: Setup Workflow Tools
         run: brew install siderolabs/tap/talosctl
+
       - name: Pre-pull Image
         run: talosctl -n $NODE_IP image pull ${{ matrix.images }}
+
   # Summarize matrix https://github.community/t/status-check-for-a-matrix-jobs/127354/7
   pre-pull-images-success:
     if: ${{ always() }}
