--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -85,7 +85,7 @@ tasks:
       IP_ADDRS:
         sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(",")'
     preconditions:
-      - talosctl --nodes {{.NODES}} get machineconfig
+      - talosctl --nodes {{.IP_ADDRS}} get machineconfig
       - talosctl config info
       - test -f {{.CLUSTER_DIR}}/talosconfig
       - which jq talosctl
@@ -108,7 +108,7 @@ tasks:
       IP_ADDRS:
         sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(",")'
     preconditions:
-      - talosctl --nodes {{.NODES}} get machineconfig
+      - talosctl --nodes {{.IP_ADDRS}} get machineconfig
       - talosctl config info
       - test -f {{.CLUSTER_DIR}}/talosconfig
       - which jq talosctl
