--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -1,18 +1,27 @@
 ---
-# Areas
-area/docs:
-  - changed-files:
-      - any-glob-to-any-file:
-          - "docs/**/*"
-          - "README.md"
-area/github:
-  - changed-files:
-      - any-glob-to-any-file: ".github/**/*"
-area/kubernetes:
-  - changed-files:
-      - any-glob-to-any-file: "kubernetes/**/*"
-area/taskfile:
-  - changed-files:
-      - any-glob-to-any-file:
-          - ".taskfiles/**/*"
-          - "Taskfile.yaml"
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
+name: "Labeler"
+
+on:
+  workflow_dispatch:
+  pull_request_target:
+    branches: ["main"]
+
+jobs:
+  labeler:
+    name: Labeler
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+    steps:
+      - name: Generate Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: "${{ secrets.BOT_APP_ID }}"
+          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
+
+      - name: Labeler
+        uses: actions/labeler@v5
+        with:
+          repo-token: "${{ steps.app-token.outputs.token }}"
+          configuration-path: .github/labeler.yaml
