--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: database
 resources:
   - ./cloudnative-pg/ks.yaml
+  # - ./mariadb/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/sops
