--- a/kubernetes/apps/default/atuin/ks.yaml
+++ b/kubernetes/apps/default/atuin/ks.yaml
@@ -3,29 +3,29 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app atuin
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *app
-  dependsOn:
-    - name: volsync
       app.kubernetes.io/name: *app
   components:
     - ../../../../flux/components/gatus/guarded
     - ../../../../flux/components/volsync
-  path: ./kubernetes/apps/default/atuin/app
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
-  wait: false
+  dependsOn:
+    - name: volsync
+      namespace: volsync-system
   interval: 30m
-  timeout: 5m
+  path: ./kubernetes/apps/default/atuin/app
   postBuild:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: sh
       VOLSYNC_CAPACITY: 5Gi
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
+  wait: false
