--- a/kubernetes/apps/default/cross-seed/ks.yaml
+++ b/kubernetes/apps/default/cross-seed/ks.yaml
@@ -3,27 +3,27 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app cross-seed
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   components:
     - ../../../../flux/components/volsync
   dependsOn:
-    - name: onepassword-store
     - name: volsync
+      namespace: volsync-system
+  interval: 30m
   path: ./kubernetes/apps/default/cross-seed/app
+  postBuild:
+    substitute:
+      APP: *app
+      VOLSYNC_CAPACITY: 5Gi
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  wait: false
-  interval: 30m
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
-      VOLSYNC_CAPACITY: 5Gi
+  wait: false
