--- a/kubernetes/apps/default/echo-server/ks.yaml
+++ b/kubernetes/apps/default/echo-server/ks.yaml
@@ -3,24 +3,24 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app echo-server
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   components:
     - ../../../../flux/components/gatus/external
+  interval: 30m
   path: ./kubernetes/apps/default/echo-server/app
+  postBuild:
+    substitute:
+      APP: *app
+      GATUS_DOMAIN: solanyn.dev
   prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  wait: false
-  interval: 30m
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
-      GATUS_DOMAIN: solanyn.dev
+  wait: false
