--- a/kubernetes/apps/default/filebrowser/ks.yaml
+++ b/kubernetes/apps/default/filebrowser/ks.yaml
@@ -5,21 +5,21 @@ metadata:
   name: &app filebrowser
   namespace: flux-system
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   components:
     - ../../../../flux/components/gatus/guarded
+  interval: 30m
   path: ./kubernetes/apps/default/filebrowser/app
+  postBuild:
+    substitute:
+      APP: *app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  wait: false
-  interval: 30m
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
+  wait: false
