--- a/kubernetes/apps/default/flaresolverr/ks.yaml
+++ b/kubernetes/apps/default/flaresolverr/ks.yaml
@@ -5,16 +5,16 @@ metadata:
   name: &app flaresolverr
   namespace: flux-system
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  interval: 30m
   path: ./kubernetes/apps/default/flaresolverr/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  wait: false
-  interval: 30m
+  targetNamespace: *namespace
   timeout: 5m
+  wait: false
