--- a/kubernetes/apps/default/jellyseerr/ks.yaml
+++ b/kubernetes/apps/default/jellyseerr/ks.yaml
@@ -1,11 +1,11 @@
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app jellyseerr
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
@@ -13,19 +13,23 @@ spec:
     - ../../../../flux/components/gatus/external
     - ../../../../flux/components/volsync
   dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
+      namespace: volsync-system
+  interval: 30m
   path: ./kubernetes/apps/default/jellyseerr/app
+  postBuild:
+    substitute:
+      APP: *app
+      GATUS_PATH: /api/v1/status
+      GATUS_SUBDOMAIN: requests
+      VOLSYNC_CAPACITY: 5Gi
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  wait: false
-  interval: 30m
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
-      GATUS_SUBDOMAIN: requests
-      GATUS_PATH: /api/v1/status
-      VOLSYNC_CAPACITY: 5Gi
+  wait: false
