--- a/kubernetes/apps/default/pgadmin/ks.yaml
+++ b/kubernetes/apps/default/pgadmin/ks.yaml
@@ -1,29 +1,29 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app pgadmin
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   components:
     - ../../../../flux/components/gatus/guarded
-    - ../../../../flux/components/volsync
   dependsOn:
     - name: onepassword-store
-    - name: volsync
+      namespace: external-secrets
+  interval: 30m
   path: ./kubernetes/apps/default/pgadmin/app
+  postBuild:
+    substitute:
+      APP: *app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
   wait: false
-  interval: 30m
-  postBuild:
-    substitute:
-      APP: *app
-      VOLSYNC_CAPACITY: 100Mi
