--- a/kubernetes/apps/default/pocket-id/ks.yaml
+++ b/kubernetes/apps/default/pocket-id/ks.yaml
@@ -1,11 +1,11 @@
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app pocket-id
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
@@ -13,17 +13,21 @@ spec:
     - ../../../../flux/components/gatus/guarded
     - ../../../../flux/components/volsync
   dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
+      namespace: volsync-system
+  interval: 30m
   path: ./kubernetes/apps/default/pocket-id/app
+  postBuild:
+    substitute:
+      APP: *app
+      GATUS_SUBDOMAIN: pid
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
   wait: false
-  interval: 30m
-  postBuild:
-    substitute:
-      APP: *app
-      GATUS_SUBDOMAIN: pid
-      VOLSYNC_CAPACITY: 1Gi
