--- a/kubernetes/apps/default/readarr/ks.yaml
+++ b/kubernetes/apps/default/readarr/ks.yaml
@@ -1,11 +1,11 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app readarr
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
@@ -13,15 +13,19 @@ spec:
     - ../../../../flux/components/gatus/guarded
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
+    - name: cloudnative-pg-cluster
+      namespace: database
+  interval: 30m
   path: ./kubernetes/apps/default/readarr/app
+  postBuild:
+    substitute:
+      APP: *app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  wait: false
-  interval: 30m
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
+  wait: false
