--- a/kubernetes/apps/default/wizarr/ks.yaml
+++ b/kubernetes/apps/default/wizarr/ks.yaml
@@ -1,11 +1,11 @@
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app wizarr
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
@@ -13,19 +13,19 @@ spec:
     - ../../../../flux/components/gatus/external
     - ../../../../flux/components/volsync
   dependsOn:
-    - name: plex
-    - name: jellyseerr
     - name: volsync
+      namespace: volsync-system
+  interval: 30m
   path: ./kubernetes/apps/default/wizarr/app
+  postBuild:
+    substitute:
+      APP: *app
+      GATUS_SUBDOMAIN: join
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  wait: false
-  interval: 30m
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
-      GATUS_SUBDOMAIN: join
+  wait: false
