--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -1,23 +1,25 @@
+---
+# yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kube-system
 resources:
   - ./cilium/ks.yaml
   - ./coredns/ks.yaml
-  - ./generic-device-plugin/ks.yaml
+  - ./intel-device-plugin/ks.yaml
   - ./metrics-server/ks.yaml
+  - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
   - ./spegel/ks.yaml
-  - ./node-feature-discovery/ks.yaml
-  - ./intel-device-plugin/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/sops
   - ../../flux/components/namespace
 patches:
-  - patch: |
+  - # Add the name to the namespace
+    patch: |
       - op: add
         path: /metadata/name
-        value: flux-system
+        value: kube-system
     target:
       kind: Namespace
