fix: add dependsOn

--- a/kubernetes/apps/default/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/default/oauth2-proxy/app/helmrelease.yaml
@@ -23,6 +23,9 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+    - name: pocket-id
+      namespace: default
   values:
     controllers:
       oauth2-proxy:
