--- a/kubernetes/apps/default/kopia/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kopia/app/helmrelease.yaml
@@ -101,7 +101,7 @@ spec:
             interval: 1m
             scrapeTimeout: 10s
     ingress:
-      main:
+      app:
         annotations:
           external-dns.alpha.kubernetes.io/target: internal.goyangi.cloud
         className: internal
