--- a/kubernetes/apps/default/open-webui/ks.yaml
+++ b/kubernetes/apps/default/open-webui/ks.yaml
@@ -13,6 +13,8 @@ spec:
     - ../../../../flux/components/gatus/guarded
     - ../../../../flux/components/volsync
   dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
       namespace: volsync-system
   interval: 30m
