--- a/kubernetes/apps/default/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/default/oauth2-proxy/app/helmrelease.yaml
@@ -100,7 +100,7 @@ spec:
             paths:
               - path: /oauth2
                 service:
-                  identifier: oauth2-proxy
+                  identifier: app
                   port: http
     serviceMonitor:
       app:
