feat: add oidc, change domain to ai

--- a/kubernetes/apps/default/open-webui/app/externalsecret.yaml
+++ b/kubernetes/apps/default/open-webui/app/externalsecret.yaml
@@ -12,6 +12,11 @@ spec:
     template:
       data:
         WEBUI_SECRET_KEY: "{{ .OPEN_WEBUI_WEBUI_SECRET_KEY }}"
+        OAUTH_CLIENT_ID: "{{ .OPEN_WEBUI_OAUTH_CLIENT_ID }}"
+        OAUTH_CLIENT_SECRET: "{{ .OPEN_WEBUI_OAUTH_CLIENT_SECRET }}"
+        OPENID_PROVIDER_URL: "https://pid.goyangi.cloud/.well-known/openid-configuration"
+        OAUTH_PROVIDER_NAME: "Pocket ID"
+        OPENID_REDIRECT_URI: "https://ai.goyangi.cloud/oauth/oidc/callback"
   dataFrom:
     - extract:
         key: open-webui
