--- a/kubernetes/apps/default/open-webui/app/helmrelease.yaml
+++ b/kubernetes/apps/default/open-webui/app/helmrelease.yaml
@@ -77,7 +77,7 @@ spec:
       app:
         className: internal
         hosts:
-          - host: "llm.goyangi.cloud"
+          - host: "ai.goyangi.cloud"
             paths:
               - path: /
                 service:
