feat: add allowed oauth domains

--- a/kubernetes/apps/default/open-webui/app/externalsecret.yaml
+++ b/kubernetes/apps/default/open-webui/app/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
         OPENID_PROVIDER_URL: "https://pid.goyangi.cloud/.well-known/openid-configuration"
         OAUTH_PROVIDER_NAME: "Pocket ID"
         OPENID_REDIRECT_URI: "https://ai.goyangi.cloud/oauth/oidc/callback"
+        OAUTH_ALLOWED_DOMAINS: ".goyangi.cloud""
   dataFrom:
     - extract:
         key: open-webui
