fix: add quotes

--- a/kubernetes/apps/default/open-webui/app/externalsecret.yaml
+++ b/kubernetes/apps/default/open-webui/app/externalsecret.yaml
@@ -18,9 +18,9 @@ spec:
         OAUTH_PROVIDER_NAME: "Pocket ID"
         OPENID_REDIRECT_URI: "https://ai.goyangi.cloud/oauth/oidc/callback"
         OAUTH_ALLOWED_DOMAINS: ".goyangi.cloud"
-        ENABLE_SIGNUP: false
-        ENABLE_LOGIN_FORM: false
-        ENABLE_OAUTH_SIGNUP: true
+        ENABLE_SIGNUP: "false"
+        ENABLE_LOGIN_FORM: "false"
+        ENABLE_OAUTH_SIGNUP: "true"
   dataFrom:
     - extract:
         key: open-webui
