fix(workflows): use all-namespaces in pre-pull workflow
* delete flux-diff workflow, superceded by flux-local

--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -46,6 +46,7 @@ jobs:
         with:
           args: >-
             get cluster
+            --all-namespaces
             --path /github/workspace/kubernetes/flux/cluster
             --enable-images
             --output yaml
