--- a/kubernetes/apps/database/mariadb/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: mariadb
 resources:
-  - backup.yaml
-  - mariadb.yaml
+  - ./externalsecret.yaml
+  - ./backup.yaml
+  - ./mariadb.yaml
+  - ./maxscale.yaml
