--- a/kubernetes/apps/observability/headlamp/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/headlamp/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
       data:
         OIDC_CLIENT_ID: "{{ .OIDC_CLIENT_ID }}"
         OIDC_CLIENT_SECRET: "{{ .OIDC_CLIENT_SECRET }}"
-        OIDC_ISSUER_URL: https://pid.goyangi.cloud
+        OIDC_ISSUER_URL: https://sso.goyangi.cloud
         OIDC_SCOPES: profile,email,repo,groups
   dataFrom:
     - extract:
