fix: helm repos + mariadb helmreleases

--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - ./intel.yaml
   - ./jetstack.yaml
   - ./kafka.yaml
+  - ./mariadb.yaml
   - ./metrics-server.yaml
   - ./node-feature-discovery.yaml
   - ./openebs.yaml
