--- a/kubernetes/apps/database/mariadb/app/helmrelease.yaml
+++ b/kubernetes/apps/database/mariadb/app/helmrelease.yaml
@@ -1,16 +1,17 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: mariadb-operator
+  name: mariadb
 spec:
   interval: 30m
   chart:
     spec:
-      chart: mariadb-operator
+      chart: mariadb
+      version: 0.28.1
       sourceRef:
         kind: HelmRepository
-        name: mariadb-operator
-      version: "0.28.1"
+        name: mariadb
+        namespace: flux-system
   install:
     remediation:
       retries: 3
