fix: chart name

--- a/kubernetes/apps/database/mariadb/app/helmrelease.yaml
+++ b/kubernetes/apps/database/mariadb/app/helmrelease.yaml
@@ -6,7 +6,7 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: mariadb
+      chart: mariadb-operator
       version: 0.28.1
       sourceRef:
         kind: HelmRepository
