fix(mariadb): add credentials, fix typo

--- a/kubernetes/apps/database/mariadb/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/externalsecret.yaml
@@ -12,7 +12,9 @@ spec:
     template:
       data:
         MINIO_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        MINIO_SECRET_ACCESS_LEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        MINIO_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        MARIADB_SUPER_USER: "{{ .MARIADB_SUPER_USER }}"
+        MARIADB_SUPER_PASS: "{{ .MARIADB_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: minio
