feat: add moco mysql operator, move emqx to database ns

--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -4,7 +4,8 @@ kind: Kustomization
 namespace: database
 resources:
   - ./cloudnative-pg/ks.yaml
-  - ./mariadb/ks.yaml
+  - ./emqx/ks.yaml
+  - ./moco/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/namespace
