--- a/kubernetes/apps/database/moco/app/externalsecret.yaml
+++ b/kubernetes/apps/database/moco/app/externalsecret.yaml
@@ -2,21 +2,21 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: mariadb
+  name: moco
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: mariadb-secret
+    name: moco-secret
     template:
       data:
         MINIO_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         MINIO_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
-        MARIADB_SUPER_USER: "{{ .MARIADB_SUPER_USER }}"
-        MARIADB_SUPER_PASS: "{{ .MARIADB_SUPER_PASS }}"
+        MYSQL_SUPER_USER: "{{ .MYSQL_SUPER_USER }}"
+        MYSQL_SUPER_PASS: "{{ .MYSQL_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: minio
     - extract:
-        key: mariadb
+        key: moco
