--- a/kubernetes/apps/database/emqx/cluster/gatus.yaml
+++ b/kubernetes/apps/database/emqx/cluster/gatus.yaml
@@ -10,7 +10,7 @@ data:
     endpoints:
       - name: emqx-mqtt
         group: infrastructure
-        url: tcp://emqx-listeners.default.svc.cluster.local:1883
+        url: tcp://emqx-listeners.database.svc.cluster.local:1883
         interval: 1m
         ui:
           hide-url: true
