--- a/kubernetes/apps/database/emqx/ks.yaml
+++ b/kubernetes/apps/database/emqx/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app emqx
-  namespace: &namespace default
+  namespace: &namespace database
 spec:
   commonMetadata:
     labels:
@@ -13,7 +13,7 @@ spec:
     - name: onepassword-store
       namespace: external-secrets
   interval: 30m
-  path: ./kubernetes/apps/default/emqx/app
+  path: ./kubernetes/apps/database/emqx/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -28,16 +28,16 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app emqx-cluster
-  namespace: &namespace default
+  namespace: &namespace database
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: emqx
-      namespace: default
+      namespace: database
   interval: 30m
-  path: ./kubernetes/apps/default/emqx/cluster
+  path: ./kubernetes/apps/database/emqx/cluster
   prune: true
   sourceRef:
     kind: GitRepository
