--- a/kubernetes/apps/database/moco/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/moco/cluster/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: mariadb
 resources:
-  - ./externalsecret.yaml
   - ./backup.yaml
-  - ./mariadb.yaml
-  - ./maxscale.yaml
+  - ./cluster.yaml
+  - ./scrapeconfig.yaml
+  - ./pvc.yaml
