--- a/kubernetes/apps/database/moco/ks.yaml
+++ b/kubernetes/apps/database/moco/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app mariadb
+  name: &app moco
   namespace: &namespace database
 spec:
   commonMetadata:
@@ -12,7 +12,7 @@ spec:
     - name: onepassword-store
       namespace: external-secrets
   interval: 30m
-  path: ./kubernetes/apps/database/mariadb/app
+  path: ./kubernetes/apps/database/moco/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -26,16 +26,16 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app mariadb-cluster
+  name: &app moco-cluster
   namespace: &namespace database
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: mariadb
+    - name: moco
   interval: 30m
-  path: ./kubernetes/apps/database/mariadb/cluster
+  path: ./kubernetes/apps/database/moco/cluster
   prune: true
   sourceRef:
     kind: GitRepository
