--- a/kubernetes/flux/meta/repositories/helm/moco.yaml
+++ b/kubernetes/flux/meta/repositories/helm/moco.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: mariadb
+  name: moco
   namespace: flux-system
 spec:
   interval: 12h
-  url: https://mariadb-operator.github.io/mariadb-operator
+  url: https://cybozu-go.github.io/moco/
