--- a/kubernetes/apps/default/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/default/oauth2-proxy/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
               OAUTH2_PROXY_PASS_USER_HEADERS: true
               OAUTH2_PROXY_PREFER_EMAIL_TO_USER: true
               OAUTH2_PROXY_PROVIDER: oidc
-              OAUTH2_PROXY_OIDC_ISSUER_URL: "https://sso.goyangi.cloud"
+              OAUTH2_PROXY_OIDC_ISSUER_URL: "https://id.goyangi.cloud"
               OAUTH2_PROXY_REVERSE_PROXY: true
               OAUTH2_PROXY_SESSION_STORE_TYPE: cookie
               OAUTH2_PROXY_SET_AUTHORIZATION-HEADER: true
