fix: pvc name is fixed

--- a/kubernetes/apps/database/moco/cluster/cluster.yaml
+++ b/kubernetes/apps/database/moco/cluster/cluster.yaml
@@ -25,7 +25,7 @@ spec:
             memory: 1Gi
   volumeClaimTemplates:
   - metadata:
-      name: mysql
+      name: mysql-data
     spec:
       storageClassName: openebs-hostpath
       accessModes: [ "ReadWriteOnce" ]
