--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -63,3 +63,9 @@ spec:
       barmanObjectStore:
         !!merge <<: *barmanObjectStore
         serverName: *previousCluster
+  managed:
+    roles:
+      - name: postgres
+        login: true
+        replication: true
+
