fix(cnpg): migration - set monolith for multiple databases

--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster17.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster17.yaml
@@ -33,7 +33,7 @@ spec:
     initdb:
       import:
         schemaOnly: true
-        type: microservice
+        type: monolith
         databases:
           - autobrr
           - gatus
