fix(cnpg): name

--- a/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - name: postgres16
+    - name: postgres
       port: 5432
       protocol: TCP
       targetPort: 5432
