feat(z2m): disable for now

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -38,7 +38,7 @@ resources:
   - ./tautulli/ks.yaml
   - ./thelounge/ks.yaml
   - ./wizarr/ks.yaml
-  - ./zigbee/ks.yaml
+  # - ./zigbee/ks.yaml
   - ./zwave/ks.yaml
 components:
   - ../../flux/components/alerts
