--- a/kubernetes/apps/default/pocket-id/app/helmrelease.yaml
+++ b/kubernetes/apps/default/pocket-id/app/helmrelease.yaml
@@ -26,6 +26,14 @@ spec:
       pocket-id:
         annotations:
           reloader.stakater.com/auto: "true"
+        initContainers:
+          init-db:
+            image:
+              repository: ghcr.io/onedr0p/postgres-init
+              tag: 16
+            envFrom: &envFrom
+              - secretRef:
+                  name: pocket-id-secret
         containers:
           app:
             image:
