--- a/kubernetes/apps/default/maintainerr/ks.yaml
+++ b/kubernetes/apps/default/maintainerr/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - ../../../../flux/components/volsync
   dependsOn:
     - name: volsync
-      namespace: storage
+      namespace: volsync-system
   interval: 30m
   path: ./kubernetes/apps/default/maintainerr/app
   postBuild:
