--- a/kubernetes/apps/default/pgadmin/ks.yaml
+++ b/kubernetes/apps/default/pgadmin/ks.yaml
@@ -15,6 +15,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
+    - name: volsync
+      namespace: volsync-system
   interval: 30m
   path: ./kubernetes/apps/default/pgadmin/app
   postBuild:
