--- a/kubernetes/apps/default/seasonpackarr/ks.yaml
+++ b/kubernetes/apps/default/seasonpackarr/ks.yaml
@@ -14,6 +14,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
+    - name: volsync
+      namespace: volsync-system
   interval: 30m
   path: ./kubernetes/apps/default/seasonpackarr/app
   postBuild:
